--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,6 +56,12 @@
 
 }
 
+.imagenLogo{
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
 /*table, th, td {
   border: 1px solid black;
